tests/handlers/snapshots/handler_tests__handlers__mutate_handler__create_scene_malformed_event_id.snap
---
source: tests/handlers/mutate_handler.rs
expression: error_message
---
Invalid event_id: Parse error: Unexpected token `-`, expected :
 --> [1:4]
  |
1 | not-a-valid-record-id
  |    ^
